# Labyrinth

./: CMakeLists.txt  README.md
include/: display.h  graph.h  type.h
src/: display.c  graph.c  main.c
tests/: CMakeLists.txt
